sort.basic.lessons.sort.basic.insertion.AlgInsertionSort.scala.error
AlgInsertionSort:3: error: not found: value getNombrevaleurs
	val n = getNombrevaleurs()
                ^