sort.basic.lessons.sort.basic.insertion.AlgInsertionSort.scala.code
def insertionSort() {
	val n = getNombrevaleurs()
  for ( k <- 0 to n -1){
    var v = getValeur(k)
    for(i <- k-1 to 0 by -1) {
      if (plusPetit(i,k)){
        copie(i,k)
        setValeur(i,v)
      }
    }
  }
}